--- a/_Imports.razor
+++ b/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.QuickGrid
 @using Microsoft.JSInterop
 @using Contilog
 @using Contilog.Shared
