--- a/Shared/NavMenu.razor.css
+++ b/Shared/NavMenu.razor.css
@@ -1,10 +1,10 @@
 .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: var(--primary-dark);
 }
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: var(--primary-color);
     background-image: none;
 }
 
@@ -33,7 +33,7 @@
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        color: var(--text-nav-menu);
         border-radius: 4px;
         height: 3rem;
         display: flex;
@@ -42,13 +42,8 @@
     }
 
 .nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
-
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
+    background-color: var(--primary-light);
+    color: var(--text-primary);
 }
 
 @media (min-width: 641px) {
