--- a/Pages/TopicDetail.razor.css
+++ b/Pages/TopicDetail.razor.css
@@ -1,4 +1,9 @@
 /* Topic Detail page styling */
+.topic-info {
+    max-width: var(--content-max-width);
+    margin: 0 auto;
+}
+
 .topic-info .card {
     background-color: var(--bg-light);
     border: 1px solid var(--border-color);
@@ -7,6 +12,9 @@
 
 .posts-section {
     margin-top: 2rem;
+    max-width: var(--content-max-width);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .posts-container {
